# ViennaVulkanEngine

./: .gitignore  todo.txt
VulkanEngine/: CMakeLists.txt  Encoder.cpp  Encoder.h  EventListenerGUI.cpp  EventListenerGUI.h  UDPReceive.cpp  UDPReceive.h  UDPSend.cpp  UDPSend.h  VEEngine.cpp  VEEngine.h  VEEntity.cpp  VEEntity.h  VEEventListenerCustom.cpp  VEEventListenerCustom.h  VEEventListenerGLFW.cpp  VEEventListenerGLFW.h  VEEventListenerNuklear.cpp  VEEventListenerNuklearDebug.cpp  VEEventListenerNuklearError.cpp  VEInclude.h  VEMaterial.cpp  VERendererForward.cpp  VERendererForward.h  VESceneManager.cpp  VESceneManager.h  VESubrender.cpp  VESubrender.h  VESubrenderFW.cpp  VESubrenderFW_C1.cpp  VESubrenderFW_Cubemap.cpp  VESubrenderFW_Cubemap2.cpp  VESubrenderFW_D.cpp  VESubrenderFW_DN.cpp  VESubrenderFW_Nuklear.cpp  VESubrenderFW_Shadow.cpp  VESubrenderFW_Skyplane.cpp  VHBuffer.cpp  VHHelper.h  VHMemory.cpp  (+4 more)
VulkanEngine/media/shader/Forward/: common_defines.glsl
VulkanEngine/shader/Forward/Skyplane/: shader.frag
